--- a/toby.html
+++ b/toby.html
@@ -12,7 +12,7 @@
 <script src="https://use.edgefonts.net/source-sans-pro:n4,n2:default.js" type="text/javascript"></script>
 </head>
 	<body>
-	<img src="jyst-social-square.jpg" class="rounded mx-auto d-block" alt="" width="735" height="296">
+	<img src="jyst-social-square.jpg" class="rounded mx-auto d-block img-fluid" alt="" width="735" height="auto">
 	<nav>
 		<div class="d-flex nav">
  	 <ul class="list-inline mx-auto justify-content-center">
