--- a/jackson.html
+++ b/jackson.html
@@ -18,8 +18,8 @@
  	 <ul class="list-inline mx-auto justify-content-center">
    	 	<li class="list-inline-item"><a href="toby.html">Toby</a></li>
     	<li class="list-inline-item"><a href="Stevenk.html">Steven K</a></li>
-    	<li class="list-inline-item"><a href="#">Roy</a></li>
-    	<li class="list-inline-item"><a href="#">Yuan</a></li>
+    	<li class="list-inline-item"><a href="roy.html">Roy</a></li>
+    	<li class="list-inline-item"><a href="Yuan.html">Yuan</a></li>
     	<li class="list-inline-item"><a href="jackson.html">Jackson</a></li>    
 		<li class="list-inline-item"><a href="yiwook.html">Yi Wook</a></li>
  	 </ul>
