--- a/team.html
+++ b/team.html
@@ -17,11 +17,11 @@
 		<div class="d-flex nav">
  	 <ul class="list-inline mx-auto justify-content-center">
    	 	<li class="list-inline-item"><a href="toby.html">Toby</a></li>
-    	<li class="list-inline-item"><a href="#">Steven K</a></li>
+    	<li class="list-inline-item"><a href="Stevenk.html">Steven K</a></li>
     	<li class="list-inline-item"><a href="#">Roy</a></li>
     	<li class="list-inline-item"><a href="#">Yuan</a></li>
-    	<li class="list-inline-item"><a href="#">Jackson</a></li>    
-		<li class="list-inline-item"><a href="#">Yi Wook</a></li> 
+    	<li class="list-inline-item"><a href="jackson.html">Jackson</a></li>    
+		<li class="list-inline-item"><a href="yiwook.html">Yi Wook</a></li> 
  	 </ul>
 </div>
 	</nav>
