--- a/roy.html
+++ b/roy.html
@@ -4,15 +4,15 @@
 <meta charset="utf-8">
 <title>JYST - Yuan </title>
 <style type="text/css">
-@import url("../tobywalmsley.github.io/teamcss.css");
-@import url("../tobywalmsley.github.io/bootstrap.css");
+@import url("teamcss.css");
+@import url(bootstrap.css);
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro')
 </style>
 <script>var __adobewebfontsappname__="dreamweaver"</script>
 <script src="https://use.edgefonts.net/source-sans-pro:n4,n2:default.js" type="text/javascript"></script>
 </head>
 	<body>
-	<img src="../tobywalmsley.github.io/jyst-social-square.jpg" class="rounded mx-auto d-block img-fluid" alt="" width="735" height="auto">
+	<img src="images/jyst-social-square.jpg" class="rounded mx-auto d-block img-fluid" alt="" width="735" height="auto">
 	<nav>
 		<div class="d-flex nav">
  	 <ul class="list-inline mx-auto justify-content-center">
