--- a/Yuan.html
+++ b/Yuan.html
@@ -16,12 +16,12 @@
 	<nav>
 		<div class="d-flex nav">
  	 <ul class="list-inline mx-auto justify-content-center">
-   	 	<li class="list-inline-item"><a href="../tobywalmsley.github.io/toby.html">Toby</a></li>
-    	<li class="list-inline-item"><a href="../tobywalmsley.github.io/Stevenk.html">Steven K</a></li>
-    	<li class="list-inline-item"><a href="../tobywalmsley.github.io/roy.html">Roy</a></li>
-    	<li class="list-inline-item"><a href="../tobywalmsley.github.io/Yuan.html">Yuan</a></li>
-    	<li class="list-inline-item"><a href="../tobywalmsley.github.io/jackson.html">Jackson</a></li>    
-		<li class="list-inline-item"><a href="../tobywalmsley.github.io/yiwook.html">Yi Wook</a></li> 
+   	 	<li class="list-inline-item"><a href="toby.html">Toby</a></li>
+    	<li class="list-inline-item"><a href="Stevenk.html">Steven K</a></li>
+    	<li class="list-inline-item"><a href="roy.html">Roy</a></li>
+    	<li class="list-inline-item"><a href="Yuan.html">Yuan</a></li>
+    	<li class="list-inline-item"><a href="jackson.html">Jackson</a></li>    
+		<li class="list-inline-item"><a href="yiwook.html">Yi Wook</a></li> 
  	 </ul>
 </div>
 	</nav>
