--- a/index.html
+++ b/index.html
@@ -15,12 +15,31 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 
-    <script>
+    <script type="text/javascript">
 $(document).ready(function () {
     $('#fade').fadeIn('slow');
 });
     </script>
-    
+	<script type="text/javascript">
+		
+		var OSName = "Unknown";
+		if (window.navigator.userAgent.indexOf("Windows NT 10.0")!= -1) OSName="Window";
+		else if (window.navigator.userAgent.indexOf("Windows NT 6.2") != -1) OSName="Windows";
+		else if (window.navigator.userAgent.indexOf("Windows NT 6.1") != -1) OSName="Windows";
+		else if (window.navigator.userAgent.indexOf("Windows NT 6.0") != -1) OSName="Windows";
+		else if (window.navigator.userAgent.indexOf("Windows NT 5.1") != -1) OSName="Windows";
+		else if (window.navigator.userAgent.indexOf("Windows NT 5.0") != -1) OSName="Windows";
+		else if (window.navigator.userAgent.indexOf("Mac")            != -1) OSName="Mac/iOS";
+		else if (window.navigator.userAgent.indexOf("X11")            != -1) OSName="UNIX";
+		else if (window.navigator.userAgent.indexOf("Linux")          != -1) OSName="Linux";
+		
+		if (OSName = "Windows"){
+		$(document).ready(function(){
+	     $("#link").attr("href", "https://www.w3schools.com/jquery/");})
+		}
+	</script>
+	
+	
     <title>JYST</title>
 </head>
 
@@ -34,7 +53,7 @@ $(document).ready(function () {
       </div>
 
         <div class="container steam text-center" id="fade" >
-            <a href ="https://store.steampowered.com/app/265930/Goat_Simulator/" target="_blank">Play Now!</a>
+            <a href ="https://store.steampowered.com/app/265930/Goat_Simulator/" id="link" target="_blank">Play Now!</a>
         </div>
         <div class="jyst"> <a href="team.html" target="_blank">   
         <img src="images/jyst-social-square.jpg" style="height: 39px; width: 75px; margin-right: 0px"/></a></div>
