--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ $("link").attr('href',"https://example.com")
         //$(this).click();
     });
 }
-			else if(OSName=="Mac/iOS") {
+			else  {
 				
 				$(document).ready (function () {
 					$('#link').one ('click', function (e) {
