--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ $(document).ready(function () {
     	});
 	});
 	}
-			else{
+			else if(getOS = "Mac OS"){
 				
 				$(document).ready (function () {
 					$('#link').one ('click', function (e) {
