--- a/index.html
+++ b/index.html
@@ -19,53 +19,10 @@
 $(document).ready(function () {
     $('#fade').fadeIn('slow');
 });
-    </script>
-	<script type="text/javascript">
 		
-		function getOS() {
-  var userAgent = window.navigator.userAgent,
-      platform = window.navigator.platform,
-      macosPlatforms = ['Macintosh', 'MacIntel', 'MacPPC', 'Mac68K'],
-      windowsPlatforms = ['Win32', 'Win64', 'Windows', 'WinCE'],
-      iosPlatforms = ['iPhone', 'iPad', 'iPod'],
-      os = null;
-
-  if (macosPlatforms.indexOf(platform) !== -1) {
-    os = 'Mac OS';
-  } else if (iosPlatforms.indexOf(platform) !== -1) {
-    os = 'iOS';
-  } else if (windowsPlatforms.indexOf(platform) !== -1) {
-    os = 'Windows'
-  } else if (/Android/.test(userAgent)) {
-    os = 'Android';
-  } else if (!os && /Linux/.test(platform)) {
-    os = 'Linux';
-  }
-
-  return os;
-			
-}
-	alert(getOS());	
-		
-		if (getOS = "Windows"){
-	$(document).ready (function () {
-		$('#link').one ('click', function (e) {
-        this.href = "http://www.google.com";
-    	});
-	});
-	}
-			else if(getOS = "Mac OS"){
-				
-				$(document).ready (function () {
-					$('#link').one ('click', function (e) {
-                	this.href = "http://www.youtube.com";
-        
-    				});
-				});
-
-		}
-	</script>
 	
+
+	</script>
 
     <title>JYST</title>
 </head>
@@ -80,10 +37,50 @@ $(document).ready(function () {
       </div>
 
         <div class="container steam text-center" id="fade" >
-            <a href ="https://www.w3schools.com/jsref/jsref_if.asp"  id="link" target="_blank">Play Now!</a>
+            <a href ="#"  id="link" onload="haveOS()" target="_blank">Play Now!</a>
         </div>
+	
+
         <div class="jyst"> <a href="team.html" target="_blank">   
         <img src="images/jyst-social-square.jpg" style="height: 39px; width: 75px; margin-right: 0px"/></a></div>
     </form>
+		<script type="text/javascript">
+
+function isMac()
+{
+    var isMac = false;
+    if (navigator.appVersion.indexOf("Mac")!=-1) {
+        var isMac = true;
+    }
+    return isMac;
+}
+		
+function isWin()
+{
+    var isWin = false;
+   if (navigator.appVersion.indexOf("Win")!=-1) {
+         var isWin = true;
+    }
+    return isWin;
+}
+		
+function isLin()
+{
+    var isLin = false;
+   if (navigator.appVersion.indexOf("Linux")!=-1) {
+       var isLin = true;
+    }
+    return isLin;
+}
+jQuery( document ).ready(function($){	
+if (isMac() == true) {
+    document.getElementById('link').setAttribute('href', 'http://www.tizag.com/javascriptT/javascriptcomment.php');
+}else if (isWin() == true) {
+    document.getElementById('link').setAttribute('href', 'https://www.youtube.com/watch?v=3XxVjP6JXNI');
+}else if (isLin() == true) {
+    document.getElementById('link').setAttribute('href', 'https://uonline.newcastle.edu.au/webapps/blackboard/content/listContent.jsp?course_id=_1392771_1&content_id=_3883923_1');
+}
+});
+	</script>
 </body>
 </html>
