--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@ function isLin()
 }
 jQuery( document ).ready(function($){	
 if (isMac() == true) {
-    document.getElementById('link').setAttribute('href', 'http://www.tizag.com/javascriptT/javascriptcomment.php');
+    document.getElementById('link').setAttribute('href', 'https://github.com/');
 }else if (isWin() == true) {
     document.getElementById('link').setAttribute('href', 'https://www.youtube.com/watch?v=3XxVjP6JXNI');
 }else if (isLin() == true) {
-    document.getElementById('link').setAttribute('href', 'https://uonline.newcastle.edu.au/webapps/blackboard/content/listContent.jsp?course_id=_1392771_1&content_id=_3883923_1');
+    document.getElementById('link').setAttribute('href', 'https://dl.acm.org/');
 }
 });
 	</script>
