--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@ $(document).ready(function () {
 
 <body  >
     <form id="form1" runat="server">
+		 <div class="container steam text-center">
+            <h1 style="font-size: 80px;">Black Cat Inc</h1>
+        </div>
         <div class=" container">
             <div class="video">
             <iframe width="700" height="400" src="https://www.youtube.com/embed/MLydVTTh53M" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
@@ -41,8 +44,8 @@ $(document).ready(function () {
         </div>
 	
 
-        <div class="jyst"> <a href="team.html" target="_blank">   
-        <img src="images/jyst-social-square.jpg" style="height: 39px; width: 75px; margin-right: 0px"/></a></div>
+        <div > <a href="team.html" target="_blank">   
+        <img src="images/jyst-social-square.jpg" class="jyst" style="height: 39px; width: 75px; margin-right: 0px"/></a></div>
     </form>
 		<script type="text/javascript">
 
