--- a/index.html
+++ b/index.html
@@ -19,9 +19,6 @@
 $(document).ready(function () {
     $('#fade').fadeIn('slow');
 });
-		
-	
-
 	</script>
 
     <title>JYST</title>
@@ -33,16 +30,16 @@ $(document).ready(function () {
 		 <div class="container steam text-center">
             <h1 style="font-size: 80px;">Black Cat Inc</h1>
         </div>
-        <div class=" container">
-            <div class="video">
+        
+            <div class=" container video">
             <iframe width="700" height="400" src="https://www.youtube.com/embed/MLydVTTh53M" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
           </div>  
-      </div>
+      
 
         <div class="container steam text-center" id="fade" >
             <a href ="#"  id="link" onload="haveOS()" target="_blank">Play Now!</a>
         </div>
-	
+		
 
         <div > <a href="team.html" target="_blank">   
         <img src="images/jyst-social-square.jpg" class="jyst" style="height: 39px; width: 75px; margin-right: 0px"/></a></div>
