--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ $(document).ready(function () {
 
 <body  >
     <form id="form1" runat="server">
-		 <div class="container steam text-center">
+		 <div class="container title text-center">
             <h1 style="font-size: 80px;">Black Cat Inc</h1>
         </div>
         
@@ -40,7 +40,7 @@ $(document).ready(function () {
             <a href ="#"  id="link" onload="haveOS()" target="_blank">Play Now!</a>
 			  </div>
 		
-			<div class="container steam text-center" id="" >
+			<div class="container steam jyst text-center" id="" >
 				<a href="team.html" target="_blank"> 
         <img src="images/jyst-social-square.jpg" style="height: 39px; width: 75px; margin-right: 0px"/></a>
         </div>
