--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@ jQuery( document ).ready(function($){
 if (isMac() == true) {
     document.getElementById('link').setAttribute('href', 'https://github.com/');
 }else if (isWin() == true) {
-    document.getElementById('link').setAttribute('href', 'https://www.youtube.com/watch?v=3XxVjP6JXNI');
+    document.getElementById('link').setAttribute('href', 'https://drive.google.com/file/d/15claMmIHXTwqRiZtIa6WQUoY-qZkp5Ih/view?usp=sharing');
 }else if (isLin() == true) {
-    document.getElementById('link').setAttribute('href', 'https://dl.acm.org/');
+    document.getElementById('link').setAttribute('href', 'https://drive.google.com/file/d/15claMmIHXTwqRiZtIa6WQUoY-qZkp5Ih/view?usp=sharing');
 }
 });
 	</script>
