--- a/index.html
+++ b/index.html
@@ -34,17 +34,18 @@ $(document).ready(function () {
             <div class=" container video">
             <iframe width="700" height="400" src="https://www.youtube.com/embed/MLydVTTh53M" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
           </div>  
-      
-
-        <div class="container steam text-center" id="fade" >
-            <a href ="#"  id="link" onload="haveOS()" target="_blank">Play Now!</a>
-			  </div>
+      <div class="container steam text-center" id="fade" >
+	<ul class="list-inline mx-auto justify-content-center">	
+        
+           <li class="list-inline-item"> <a href ="#"  id="link" onload="haveOS()" target="_blank">Play Now!</a>
+			   </li>
 		
-			<div class="container steam jyst text-center" id="" >
-				<a href="team.html" target="_blank"> 
-        <img src="images/jyst-social-square.jpg" style="height: 39px; width: 75px; margin-right: 0px"/></a>
+			<li class="list-inline-item">
+            <a href ="team.html"  id="" onload="haveOS()" target="_blank">Learn More!</a>
+			   </li>
+		</ul>
         </div>
-
+	
     </form>
 		<script type="text/javascript">
 
