--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ function isLin()
 }
 jQuery( document ).ready(function($){	
 if (isMac() == true) {
-    document.getElementById('link').setAttribute('href', 'https://github.com/');
+    document.getElementById('link').setAttribute('href', 'https://drive.google.com/drive/folders/1mpOLdevnnPMqfN0_0BTcGVSPlwYk0HHg?usp=sharing');
 }else if (isWin() == true) {
     document.getElementById('link').setAttribute('href', 'https://drive.google.com/file/d/15claMmIHXTwqRiZtIa6WQUoY-qZkp5Ih/view?usp=sharing');
 }else if (isLin() == true) {
