game link update

--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@ jQuery( document ).ready(function($){
 if (isMac() == true) {
     document.getElementById('link').setAttribute('href', 'https://drive.google.com/drive/folders/1mpOLdevnnPMqfN0_0BTcGVSPlwYk0HHg?usp=sharing');
 }else if (isWin() == true) {
-    document.getElementById('link').setAttribute('href', 'https://drive.google.com/file/d/15claMmIHXTwqRiZtIa6WQUoY-qZkp5Ih/view?usp=sharing');
+    document.getElementById('link').setAttribute('href', 'https://drive.google.com/open?id=1GJWPL3fiGKEzf8vw0tQhvqjMFHezQl49');
 }else if (isLin() == true) {
-    document.getElementById('link').setAttribute('href', 'https://drive.google.com/file/d/15claMmIHXTwqRiZtIa6WQUoY-qZkp5Ih/view?usp=sharing');
+    document.getElementById('link').setAttribute('href', 'https://drive.google.com/open?id=1GJWPL3fiGKEzf8vw0tQhvqjMFHezQl49');
 }
 });
 	</script>
