--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ function isLin()
 }
 jQuery( document ).ready(function($){	
 if (isMac() == true) {
-    document.getElementById('link').setAttribute('href', 'https://drive.google.com/drive/folders/1mpOLdevnnPMqfN0_0BTcGVSPlwYk0HHg?usp=sharing');
+    document.getElementById('link').setAttribute('href', 'https://drive.google.com/open?id=1dO5knK-b-W6_GzdNmOVz0TAobw2kwtxL');
 }else if (isWin() == true) {
     document.getElementById('link').setAttribute('href', 'https://drive.google.com/open?id=1GJWPL3fiGKEzf8vw0tQhvqjMFHezQl49');
 }else if (isLin() == true) {
