--- a/index.html
+++ b/index.html
@@ -77,11 +77,12 @@ function isLin()
 }
 jQuery( document ).ready(function($){	
 if (isMac() == true) {
-    document.getElementById('link').setAttribute('href', 'https://drive.google.com/open?id=1dO5knK-b-W6_GzdNmOVz0TAobw2kwtxL');
+    document.getElementById('link').setAttribute('href', 'https://drive.google.com/file/d/1wZfqpRIXHyzcopj2qDd9sHVJ789jsL0_/view');
 }else if (isWin() == true) {
-    document.getElementById('link').setAttribute('href', 'https://drive.google.com/open?id=1GJWPL3fiGKEzf8vw0tQhvqjMFHezQl49');
+    document.getElementById('link').setAttribute('href', 'https://drive.google.com/open?id=1qstqeWZktFJJ5enxtpvk6Uh8TD7XMqs0');
 }else if (isLin() == true) {
-    document.getElementById('link').setAttribute('href', 'https://drive.google.com/open?id=1GJWPL3fiGKEzf8vw0tQhvqjMFHezQl49');
+    document.getElementById('link').setAttribute('href', 'https://drive.google.com/open?id=1qstqeWZktFJJ5enxtpvk6Uh8TD7XMqs0');
+	//included linux to cover most OS bases. There is no version that will play on linux however
 }
 });
 	</script>
